# temporal_rel_data_gen

./: .gitignore  README.md  pyproject.toml  reldiff.yaml  run_amazon_toy_graph_tabdlm_v2.sh  run_amazon_toy_nontext_attr_3_methods.sh  run_amazon_toy_v3_sampling_sweeps.sh  run_smallest_reldiff.py  structure.yaml
docs/: diffusion_optimization_report.md  hm_lstm_experiment.md  interaction_benchmark_preprocessing.md  movielens_lstm_diagnosis.md  movielens_lstm_experiment.md  temporal_event_spine_results_slides.md  temporal_event_spine_v2_slides.md  v4_diffusion_sampler_diagnosis.md  v4_hierarchical_diffusion_design.md  v4_hierarchical_diffusion_results.md
reproducibility/: convert_adventure_works.py  convert_relbench_data.py  create_toy_rel_amazon.py  download_data.py  requirements.txt
src/: tempdir_bootstrap.py
tests/: attr_denoising_test_utils.py  lstm_fast_sampler_test_utils.py  test_attr_denoising_graph_forward.py  test_attr_denoising_graph_no_clean_target_leakage.py  test_attr_denoising_graph_sampling_chronological.py  test_attr_denoising_graph_temporal_causality.py  test_attr_denoising_neighbor_aux_loss.py  test_attr_graph_aux_loss_respects_inputs.py  test_attr_graph_configurable_inputs.py  test_attr_graph_exclude_summary_tokens.py  test_attr_graph_summary_gate.py  test_attr_graph_v31_safety_metadata.py  test_compare_v5_v51_privacy_alignment.py  test_conditional_tabdlm_dataset.py  test_conditional_tabdlm_length_calibration.py  test_conditional_tabdlm_masking.py  test_conditional_tabdlm_model_forward.py  test_conditional_tabdlm_sampling.py  test_event_affinity.py  (+132 more)
(+301 files in other folders)
